# portfolio-website

./: GITHUB_PAGES_DEPLOY.md  IMPLEMENTATION_SUMMARY.md  README.md  RENDER_DEPLOYMENT.md  RENDER_QUICK_START.md  SETUP_GUIDE.md  contact.html  index.html  projects.html  styles.css
assets/: index-BenlSx1e.js  index-DJ2OShw5.css  index-DV6UYQO6.js
backend/: .env.example  .gitignore  README.md  auth.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  settings.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.svelte  api.js
frontend/src/pages/: AdminDashboard.svelte  AdminLogin.svelte  Contact.svelte  Home.svelte  Projects.svelte
